--- a/DiabetesPrediction/App/app/src/main/res/layout/activity_homepage.xml
+++ b/DiabetesPrediction/App/app/src/main/res/layout/activity_homepage.xml
@@ -40,7 +40,7 @@
         android:gravity="center"
         android:text="Glucose ⓘ"
         android:drawableTop="@mipmap/inulinlogo"
-        android:textSize="17sp" />
+        android:textSize="16sp" />
     <Button
         android:id="@+id/Pressure_info"
         android:layout_width="20dp"
@@ -53,7 +53,7 @@
         android:drawableTop="@mipmap/bplogo"
         android:gravity="center"
         android:text="Pressure ⓘ"
-        android:textSize="17sp" />
+        android:textSize="16sp" />
 
 
     <Button
@@ -68,7 +68,7 @@
         android:drawableTop="@mipmap/bmilogo"
         android:gravity="center"
         android:text="BMI ⓘ"
-        android:textSize="17sp" />
+        android:textSize="16sp" />
 </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,7 +86,7 @@
             android:drawableTop="@mipmap/pegnantlogo"
             android:gravity="center"
             android:text="Pregnancy ⓘ"
-            android:textSize="16sp" />
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/Pedigree_info"
@@ -112,5 +112,17 @@
     android:layout_marginTop="560dp"
     android:backgroundTint="@color/colorPrimary"
     android:text="Predict Now" />
+
+    <TextView
+        android:id="@+id/Profilebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/PredictNow"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="151dp"
+        android:text="Check Your Profile" />
 
 </RelativeLayout>
