--- a/DiabetesPrediction/App/app/src/main/res/layout/activity_homepage.xml
+++ b/DiabetesPrediction/App/app/src/main/res/layout/activity_homepage.xml
@@ -118,6 +118,7 @@
 
     <Button
         android:id="@+id/PredictNow1"
+        android:visibility="invisible"
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_alignParentTop="true"
@@ -128,18 +129,17 @@
         android:text="System"
         android:textColor="@color/White" />
 
-    <TextView
+    <Button
         android:id="@+id/Profilebtn"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/PredictNow"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="24dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="132dp"
         android:text="Check Your Profile"
-        android:textColor="@color/White" />
+        android:textColor="@color/White"
+        />
 
 </RelativeLayout>
