--- a/DiabetesPrediction/App/app/src/main/res/layout/activity_user_profile.xml
+++ b/DiabetesPrediction/App/app/src/main/res/layout/activity_user_profile.xml
@@ -105,34 +105,22 @@
 
 
             </com.google.android.material.textfield.TextInputLayout>
-            <com.google.android.material.textfield.TextInputLayout
+           <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Contact"
+                android:hint="Your previous prediction is:"
                 android:layout_marginBottom="10dp"
                 android:clickable="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:longClickable="false"
-                >
+               android:textColor="@color/Black"
+               android:textSize="18dp"
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:editable="false"
-                    android:clickable="false"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/contact"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:longClickable="false"
                     />
 
 
-            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Date of Birth"
+                android:hint="Result will be shown here!"
                 android:layout_marginBottom="10dp"
                 android:clickable="false"
                 android:focusable="false"
@@ -146,7 +134,7 @@
                     android:textCursorDrawable="@null"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/DOB"
+                    android:id="@+id/previousresult"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:longClickable="false"
